syntax = "proto3";
package protos.session_history;

message LapHistoryData {
  uint32 lapTimeInMS = 1; // Lap time in milliseconds
  uint32 sector1Time = 2; // Sector 1 time in milliseconds
  uint32 sector2Time = 4; // Sector 2 time in milliseconds
  uint32 sector3Time = 6; // Sector 3 time in milliseconds
  uint32 lapValidBitFlags =
      8; // 0x01 bit set - lap valid, 0x02 bit set - sector 1 valid, 0x04 bit
         // set - sector 2 valid, 0x08 bit set - sector 3 valid
}

message TyreStintHistoryData {
  uint32 endLap = 1; // Lap the tyre usage ends on (255 of current tyre)
  uint32 tyreActualCompound = 2; // Actual tyres used by this driver
  uint32 tyreVisualCompound = 3; // Visual tyres used by this driver
}

message PacketSessionHistoryData {
  uint32 carIdx = 1;
  uint32 numLaps = 2;
  uint32 numTyreStints = 3;
  uint32 bestLapTimeLapNum = 4;
  uint32 bestSector1LapNum = 5;
  uint32 bestSector2LapNum = 6;
  uint32 bestSector3LapNum = 7;
  repeated LapHistoryData lapHistoryData = 8;
  repeated TyreStintHistoryData tyreStintsHistoryData = 9;
}